flux/apps/arr/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: default
spec:
  selector:
    matchLabels:
      app: bazarr
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.6.0
          resources:
            requests:
              cpu: 174m
              memory: 311Mi
            limits:
              memory: 311Mi
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: bazarr-data
              mountPath: /config
            - name: media-movies
              mountPath: /movies
            - name: media-shows
              mountPath: /shows
      volumes:
        - name: bazarr-data
          nfs:
            server: datasphere
            path: /Root/Volumes/bazarr
        - name: media-movies
          nfs:
            server: datasphere
            path: /Root/Media/Movies
        - name: media-shows
          nfs:
            server: datasphere
            path: /Root/Media/Shows
