flux/apps/arr/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: default
spec:
  selector:
    app: bazarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6767
