flux/apps/arr/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`bazarr.home`)
      kind: Rule
      services:
        - name: bazarr
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bazarr.arlodev.co.uk`)
      kind: Rule
      services:
        - name: bazarr
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.arlodev.co.uk`)
      kind: Rule
      services:
        - name: bazarr
          port: 80
  tls:
    secretName: cert-bazarr
